remove np log on y set

--- a/02-regression/homework_2.ipynb
+++ b/02-regression/homework_2.ipynb
@@ -261,16 +261,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 131,
    "id": "34c50465-7542-4480-b804-61f958467f0a",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_train, df_val, df_test = create_validation_frame(df)\n",
     "len(df_train), len(df_val), len(df_test)\n",
-    "y_train = np.log1p(df_train.fuel_efficiency_mpg.values)\n",
-    "y_val = np.log1p(df_val.fuel_efficiency_mpg.values)\n",
-    "y_test = np.log1p(df_test.fuel_efficiency_mpg.values)\n",
+    "y_train = df_train.fuel_efficiency_mpg.values\n",
+    "y_val = df_val.fuel_efficiency_mpg.values\n",
+    "y_test = df_test.fuel_efficiency_mpg.values\n",
     "mean_value = df_train.fuel_efficiency_mpg.mean()\n",
     "del df_train['fuel_efficiency_mpg']\n",
     "del df_val['fuel_efficiency_mpg']\n",
@@ -279,17 +279,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 132,
    "id": "902f2b72-f8f0-4489-8f3c-e36aeb6bf43b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(0.04)"
+       "np.float64(0.52)"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,17 +305,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 133,
    "id": "8433204f-83c6-4b47-852d-99950ccbe046",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(0.04)"
+       "np.float64(0.52)"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 134,
    "id": "5973e83d-b062-46d2-9b2e-0a9eca05a747",
    "metadata": {},
    "outputs": [],
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 137,
    "id": "b1bd5979-88e1-44d7-a8f2-05133042ebdc",
    "metadata": {},
    "outputs": [
@@ -355,13 +355,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 3.593421327008845 0.03861\n",
-      "0.01 3.1036742495036447 0.03863\n",
-      "0.1 1.3939019563361459 0.03924\n",
-      "1 0.21415509485652717 0.04012\n",
-      "5 0.04497602525332003 0.04028\n",
-      "10 0.022630081669347605 0.0403\n",
-      "100 0.002276727731185574 0.04032\n"
+      "     0 0.51\n",
+      "  0.01 0.51\n",
+      "   0.1 0.52\n",
+      "     1 0.52\n",
+      "     5 0.52\n",
+      "    10 0.52\n",
+      "   100 0.52\n"
      ]
     }
    ],
@@ -373,22 +373,22 @@
     "    X_val = prepare_x(df_val)\n",
     "    y_pred = w0 + X_val.dot(w)\n",
     "    score = rmse(y_val, y_pred)\n",
-    "    print(r, w0, round(score, 5))"
+    "    print('%6s' %r, round(score, 2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 138,
    "id": "f24a2bfb-cb7b-49dd-915e-bf26ad0408a0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(0.001)"
+       "np.float64(0.007)"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,9 +398,9 @@
     "for seed in [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]:\n",
     "    df_train, df_val, df_test = create_validation_frame(df, seed)\n",
     "    len(df_train), len(df_val), len(df_test)\n",
-    "    y_train = np.log1p(df_train.fuel_efficiency_mpg.values)\n",
-    "    y_val = np.log1p(df_val.fuel_efficiency_mpg.values)\n",
-    "    y_test = np.log1p(df_test.fuel_efficiency_mpg.values)\n",
+    "    y_train = df_train.fuel_efficiency_mpg.values\n",
+    "    y_val = df_val.fuel_efficiency_mpg.values\n",
+    "    y_test = df_test.fuel_efficiency_mpg.values\n",
     "    del df_train['fuel_efficiency_mpg']\n",
     "    del df_val['fuel_efficiency_mpg']\n",
     "    del df_test['fuel_efficiency_mpg']\n",
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 139,
    "id": "81b88bc3-31f1-40c5-8ff2-eb3525ec2a17",
    "metadata": {},
    "outputs": [
@@ -426,7 +426,7 @@
        "np.float64(0.5156261299167999)"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
