--- a/03-classification/homework_3.ipynb
+++ b/03-classification/homework_3.ipynb
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 186,
    "id": "7948dd09-e05e-4774-ae9f-4c5629b36039",
    "metadata": {},
    "outputs": [
@@ -981,14 +981,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "number_of_courses_viewed 0.14675767918088745\n",
-      "annual_income 0.15017064846416384\n",
-      "interaction_count 0.14675767918088745\n",
-      "lead_score 0.0034129692832763903\n",
       "industry 0.0034129692832765013\n",
-      "employment_status 0.0068259385665528916\n",
-      "location 0.0068259385665528916\n",
-      "lead_source 0.0\n"
+      "lead_source 0.0\n",
+      "employment_status 0.0068259385665528916\n"
      ]
     }
    ],
@@ -1001,7 +996,7 @@
     "acc = calculate_accuracy(y_pred, y_val)\n",
     "\n",
     "\n",
-    "for feat in numerical + categorial:\n",
+    "for feat in ['industry', 'lead_source', 'employment_status']:\n",
     "    df_train_dropped = df_train.drop(columns=[feat])\n",
     "\n",
     "    X_train = prepare_x(df_train_dropped)\n",
@@ -1018,22 +1013,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
-   "id": "a19d018d-106b-4ba2-bf07-99f3ab0a3013",
+   "execution_count": null,
+   "id": "3e3686b6-ab9e-4c20-9920-c421f39bc4fc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.01 0.7\n",
-      "0.1 0.7\n",
-      "1 0.7\n",
-      "10 0.7\n",
-      "100 0.7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "C_list = [0.01, 0.1, 1, 10, 100]\n",
     "\n",
